--- a/azure-vote/manifests/azure-vote/helm/templates/az-vote-front-ingress.yaml
+++ b/azure-vote/manifests/azure-vote/helm/templates/az-vote-front-ingress.yaml
@@ -2,16 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
   name: az-vote-front-ingress
 spec:
   rules:
-    - http:
-        paths:
-          - path: { { .Values.demoAppUrl } }
-            pathType: Prefix
-            backend:
-              service:
-                name: azure-vote-front
-                port:
-                  number: 80
+  - http:
+      paths:
+      - backend:
+        service:
+          name: azure-vote-front
+          port:
+            number: 80
+        path: {{  .Values.demoAppUrl}}(/|$)(.*)
+        pathType: Prefix
