Added Manifest resource

--- a/.pipelines/az-vote-cd-pipeline.yaml
+++ b/.pipelines/az-vote-cd-pipeline.yaml
@@ -8,6 +8,11 @@ resources:
       trigger:
         branches:
           - master
+  repositories:
+    - repository: Manifest
+      type: git # Set to 'github' for a GitHub repository 
+      name: azure-vote-app-deployment
+      ref: 'refs/heads/dev'
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
