--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -1,3 +1,11 @@
+parameters:
+  - name: DEPLOY_BRANCH_NAME
+    default: deploy/$(Build.BuildNumber)/$(MANIFESTS_BRANCH)
+    type: string
+  - name: MANIFEST_DIR
+    default: $(System.DefaultWorkingDirectory)/$(MANIFESTS_REPO)
+    type: string
+
 steps:
 - checkout: self
 - checkout: Manifest
@@ -15,24 +23,23 @@ steps:
   env:
     PR_USER_NAME: "Git Ops"
     PR_USER_EMAIL: "agent@gitops.com"
-  workingDirectory: $(MANIFEST_DIR)
+  workingDirectory: ${{ parameters.MANIFEST_DIR }}
 
 - script: |
-   echo "Create a new branch $(DEPLOY_BRANCH_NAME)"   
-   git checkout -b $(DEPLOY_BRANCH_NAME)
+   echo "Create a new branch ${{ parameters.DEPLOY_BRANCH_NAME }}"   
+   git checkout -b ${{ parameters.DEPLOY_BRANCH_NAME }}
    mkdir -p $(MANIFESTS_FOLDER)
    cp -r $(Build.SourcesDirectory)/gen_manifests/* $(MANIFESTS_FOLDER)/
    git add -A
    git commit -m "deployment $(Build.BuildNumber)"
-   git push --set-upstream origin $(DEPLOY_BRANCH_NAME)
+   git push --set-upstream origin ${{ parameters.DEPLOY_BRANCH_NAME }}
   displayName: Add Generated Manifest to New Branch
-  workingDirectory: $(MANIFEST_DIR)
+  workingDirectory: ${{ parameters.MANIFEST_DIR }}
 
 - script: |
    echo $(System.AccessToken) | az devops login
-   az devops configure --defaults organization=https://dev.azure.com/$(OrganizationName) project="$(PROJECT_NAME)" --use-git-aliases true
-   pr_response=$(az repos pr create --project $(PROJECT_NAME) --repository $(REPO_NAME) --target-branch $(MANIFESTS_BRANCH) --source-branch $DEPLOY_BRANCH_NAME --title "deployment $(Build.BuildNumber)" --auto-complete --squash -o json)
-   export pr_num=$(echo $pr_response | jq '.pullRequestId')
-   echo "##vso[task.setvariable variable=PR_NUM;isOutput=true]$pr_num"
-  name: "Create_PR" 
+   az devops configure --defaults organization=https://dev.azure.com/$(ORGANIZATION_NAME) project="$(PROJECT_NAME)" --use-git-aliases true
+   az repos pr create --project $(PROJECT_NAME) --repository $(MANIFESTS_REPO) --target-branch $(MANIFESTS_BRANCH) --source-branch ${{ parameters.DEPLOY_BRANCH_NAME }} --title "deployment $(Build.BuildNumber)" --auto-complete --squash
+  env:
+    AZURE_DEVOPS_CLI_PAT: $(System.AccessToken)
   displayName: Create Pull Request   
