Hard-coded manifest repo

--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -3,7 +3,7 @@ parameters:
     default: deploy/$(Build.BuildNumber)/$(MANIFESTS_BRANCH)
     type: string
   - name: MANIFEST_DIR
-    default: $(System.DefaultWorkingDirectory)/$(MANIFESTS_REPO)
+    default: $(System.DefaultWorkingDirectory)/arc-cicd-demo-gitops
     type: string
 
 steps:
@@ -39,7 +39,7 @@ steps:
 - script: |
    echo $(System.AccessToken) | az devops login
    az devops configure --defaults organization=https://dev.azure.com/$(ORGANIZATION_NAME) project="$(PROJECT_NAME)" --use-git-aliases true
-   az repos pr create --project $(PROJECT_NAME) --repository $(MANIFESTS_REPO) --target-branch $(MANIFESTS_BRANCH) --source-branch ${{ parameters.DEPLOY_BRANCH_NAME }} --title "deployment $(Build.BuildNumber)" --auto-complete --squash
+   az repos pr create --project $(PROJECT_NAME) --repository arc-cicd-demo-gitops --target-branch $(MANIFESTS_BRANCH) --source-branch ${{ parameters.DEPLOY_BRANCH_NAME }} --title "deployment $(Build.BuildNumber)" --auto-complete --squash
   env:
     AZURE_DEVOPS_CLI_PAT: $(System.AccessToken)
   displayName: Create Pull Request   
