--- a/.pipelines/az-vote-cd-pipeline.yaml
+++ b/.pipelines/az-vote-cd-pipeline.yaml
@@ -8,6 +8,12 @@ resources:
       trigger:
         branches:
           - master
+  repositories:
+  - repository: Manifest
+    type: git
+    name: arc-cicd-demo-gitops
+    ref: 'refs/heads/dev'
+
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
@@ -35,6 +41,23 @@ stages:
             deploy:
               steps:
                 - template: deployment-template.yaml
+    
+      - job: deploy_with_gitops
+        dependsOn: Deploy_to_dev
+        displayName: Wait for changes to be applied
+        pool: server          
+        variables:
+          pr_num: $[ dependencies.Deploy_to_dev.outputs['Deploy_to_dev.Create_PR.PR_NUM'] ]
+        condition: ne(variables['pr_num'],'')
+        steps:   
+        - template: pr-completion-task-template.yaml                 
+
+      - job: "Automated_testing"
+        displayName: Automated testing 
+        dependsOn: deploy_with_gitops
+        steps:
+        - template: post-deployment-test-template.yaml
+
 
   - stage: "deploy_stage"
     displayName: "Deploy to Stage"
@@ -49,3 +72,19 @@ stages:
             deploy:
               steps:
                 - template: deployment-template.yaml
+
+      - job: deploy_with_gitops
+        dependsOn: Deploy_to_stage
+        displayName: Wait for changes to be applied
+        pool: server          
+        variables:
+          pr_num: $[ dependencies.Deploy_to_stage.outputs['Deploy_to_stage.Create_PR.PR_NUM'] ]
+        condition: ne(variables['pr_num'],'')        
+        steps:   
+        - template: pr-completion-task-template.yaml  
+
+      - job: "Automated_testing"
+        displayName: Automated testing 
+        dependsOn: deploy_with_gitops
+        steps:
+        - template: post-deployment-test-template.yaml
