--- a/.pipelines/az-vote-cd-pipeline.yaml
+++ b/.pipelines/az-vote-cd-pipeline.yaml
@@ -7,7 +7,9 @@ resources:
       source: "arc-cicd-demo-src CI"
       trigger:
         branches:
-          - master
+        # Until Flux V2 integration is in Public Preview, work with FluxV2 branch.
+        # Once Flux V2 integration is in Public Preview, FluxV2 branch will be merged into the default branch.
+          - FluxV2
   repositories:
   - repository: Manifest
     type: git
