--- a/.pipelines/az-vote-ci-pipeline.yaml
+++ b/.pipelines/az-vote-ci-pipeline.yaml
@@ -3,7 +3,9 @@ pr: none
 trigger:
   branches:
     include:
-      - master
+      # Until Flux V2 integration is in Public Preview, work with FluxV2 branch.
+      # Once Flux V2 integration is in Public Preview, FluxV2 branch will be merged into the default branch.
+        - FluxV2
 variables:
   - group: az-vote-app-dev
 
