Update az-vote-cd-pipeline.yaml for Azure Pipelines

--- a/.pipelines/az-vote-cd-pipeline.yaml
+++ b/.pipelines/az-vote-cd-pipeline.yaml
@@ -54,11 +54,11 @@ stages:
         steps:   
         - template: pr-completion-task-template.yaml                 
 
-      - job: "Automated_testing"
-        displayName: Automated testing 
-        dependsOn: deploy_with_gitops
-        steps:
-        - template: post-deployment-test-template.yaml
+      # - job: "Automated_testing"
+      #   displayName: Automated testing 
+      #   dependsOn: deploy_with_gitops
+      #   steps:
+      #   - template: post-deployment-test-template.yaml
 
 
   # - stage: "deploy_stage"
