--- a/.pipelines/deployment-template.yaml
+++ b/.pipelines/deployment-template.yaml
@@ -8,4 +8,4 @@ steps:
       targetType: "inline"
       script: |
         for file in $(images_artifact_path)/*; do echo "##vso[task.setvariable variable=${file##*/}]$(cat $file)"; done
-  # - template: genmanifest-createpr-template.yaml 
+  - template: genmanifest-createpr-template.yaml 
