--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -8,8 +8,8 @@ parameters:
 
 steps:
 - checkout: self
-- checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
-  persistCredentials: true
+# - checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
+#   persistCredentials: true
 
 - task: Bash@3        
   name: "Generate_Manifests"
