--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -7,7 +7,7 @@ parameters:
     type: string
 
 steps:
-# - checkout: self
+- checkout: self
 - checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
   persistCredentials: true
 
