--- a/.pipelines/az-vote-cd-pipeline.yaml
+++ b/.pipelines/az-vote-cd-pipeline.yaml
@@ -10,6 +10,10 @@ resources:
         # Until Flux V2 integration is in Public Preview, work with FluxV2 branch.
         # Once Flux V2 integration is in Public Preview, FluxV2 branch will be merged into the default branch.
           - FluxV2
+    repositories:
+    - repository: Manifest
+      type: git # Set to 'github' for a GitHub repository 
+      name: $(MANIFESTS_REPO)
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
