--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -8,7 +8,9 @@ parameters:
 
 steps:
 # - checkout: self
-- checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
+# - checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
+#   persistCredentials: true
+- checkout: Manifest
   persistCredentials: true
 
 - task: Bash@3        
