--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -8,10 +8,10 @@ parameters:
 
 steps:
 # - checkout: self
-- checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
-  persistCredentials: true
-# - checkout: Manifest
+# - checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
 #   persistCredentials: true
+- checkout: Manifest
+  persistCredentials: true
 
 - task: Bash@3        
   name: "Generate_Manifests"
