--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -7,11 +7,11 @@ parameters:
     type: string
 
 steps:
-# - checkout: self
-# - checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
-#   persistCredentials: true
-- checkout: Manifest
+- checkout: self
+- checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
   persistCredentials: true
+# - checkout: Manifest
+#   persistCredentials: true
 
 - task: Bash@3        
   name: "Generate_Manifests"
