--- a/.pipelines/post-deployment-test-template.yaml
+++ b/.pipelines/post-deployment-test-template.yaml
@@ -5,4 +5,4 @@ steps:
     inputs:
       azureSubscription: $(AZURE_SUBSCRIPTION)
       scriptType: bash
-      scriptLocation: utils/smoke-test.sh
+      scriptPath: utils/smoke-test.sh
