--- a/.github/workflows/az-vote-cicd.yml
+++ b/.github/workflows/az-vote-cicd.yml
@@ -60,17 +60,17 @@ jobs:
       uses: actions/upload-artifact@v2.2.2
       with:
         name: image_tags
-        path: ${{ github.workspace }}/${{ secrets.IMAGE_ARTIFACT_PATH }}
+        path: ${{ github.workspace }}/images
     - name: Upload Manifests Templates
       uses: actions/upload-artifact@v2.2.2
       with:
         name: manifests
-        path: ${{ github.workspace }}/${{ secrets.MANIFEST_ARTIFACT_PATH }}
+        path: ${{ github.workspace }}/manifests
     - name: Upload Utils
       uses: actions/upload-artifact@v2.2.2
       with:
         name: utils
-        path: ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}
+        path: ${{ github.workspace }}/utils
   Deploy_to_Dev:
     name: "Deploy to Dev"
     runs-on: ubuntu-latest
@@ -83,25 +83,25 @@ jobs:
       uses: actions/download-artifact@v2.0.8
       with:
         name: image_tags
-        path: ${{ github.workspace }}/${{ secrets.IMAGE_ARTIFACT_PATH }}
+        path: ${{ github.workspace }}/images
     - name: Download Manifests Templates
       uses: actions/download-artifact@v2.0.8
       with:
         name: manifests
-        path: ${{ github.workspace }}/${{ secrets.MANIFEST_ARTIFACT_PATH }}
+        path: ${{ github.workspace }}/manifests
     - name: Download Utils
       uses: actions/download-artifact@v2.0.8
       with:
         name: utils
-        path: ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}
+        path: ${{ github.workspace }}/utils
     - name: Read Image Tags
       env:
         ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       run: |
-        for file in ${{ github.workspace }}/${{ secrets.IMAGE_ARTIFACT_PATH }}/*; do echo "::set-env name=${file##*/}::$(cat $file)"; done 
+        for file in ${{ github.workspace }}/images/*; do echo "::set-env name=${file##*/}::$(cat $file)"; done 
     - name: Generate Manifests
       run: |
-        ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/generate-manifests.sh ${{ secrets.MANIFEST_ARTIFACT_PATH }} gen_manifests
+        ${{ github.workspace }}/utils/generate-manifests.sh manifests gen_manifests
       env:
         TARGET_NAMESPACE: ${{ secrets.TARGET_NAMESPACE }}
         VOTE_APP_TITLE: ${{ secrets.VOTE_APP_TITLE }}
@@ -116,5 +116,5 @@ jobs:
         release_number=$(echo $GITHUB_REF | awk -F"release/" '{print $2}')
         [[ -z "$release_number" ]] || release_prefix=release/$release_number/  
 
-        ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b $(echo $release_prefix)${{ secrets.MANIFESTS_BRANCH }} -i $GITHUB_RUN_ID -t ${{ secrets.PAT }} -e ${{ secrets.ENVIRONMENT_NAME }} -p ${{ secrets.PLATFORM }}
+        ${{ github.workspace }}/utils/create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b $(echo $release_prefix)${{ secrets.MANIFESTS_BRANCH }} -i $GITHUB_RUN_ID -t ${{ secrets.PAT }} -e ${{ secrets.ENVIRONMENT_NAME }}
 
