--- a/.github/workflows/az-vote-cd.yml
+++ b/.github/workflows/az-vote-cd.yml
@@ -15,8 +15,8 @@ jobs:
       uses: actions/checkout@v2.3.4
     - name: Automated Test
       run: |
-        chmod +x ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/smoke-test.sh
-        ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/smoke-test.sh ${{ secrets.CLUSTER_ENTRY_URL }}${{ secrets.DEMO_APP_URL }}
+        chmod +x ${{ github.workspace }}/utils/smoke-test.sh
+        ${{ github.workspace }}/utils/smoke-test.sh
   Deploy_to_Stage:
       name: "Deploy to Stage"
       runs-on: ubuntu-latest
@@ -33,30 +33,30 @@ jobs:
           name: image_tags
           workflow: az-vote-cicd.yml
           run_id: ${{ github.event.client_payload.runid }}
-          path: ${{ github.workspace }}/${{ secrets.IMAGE_ARTIFACT_PATH }}
+          path: ${{ github.workspace }}/images
       - name: Download Manifests Templates
         uses: dawidd6/action-download-artifact@v2
         with:
           name: manifests
           workflow: az-vote-cicd.yml
           run_id: ${{ github.event.client_payload.runid }}
-          path: ${{ github.workspace }}/${{ secrets.MANIFEST_ARTIFACT_PATH }}
+          path: ${{ github.workspace }}/manifests
       - name: Download Utils
         uses: dawidd6/action-download-artifact@v2
         with:
           name: utils
           workflow: az-vote-cicd.yml
           run_id: ${{ github.event.client_payload.runid }}
-          path: ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}
+          path: ${{ github.workspace }}/utils
       - name: Read Image Tags
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         run: |
-          for file in ${{ github.workspace }}/${{ secrets.IMAGE_ARTIFACT_PATH }}/*; do echo "::set-env name=${file##*/}::$(cat $file)"; done 
+          for file in ${{ github.workspace }}/images/*; do echo "::set-env name=${file##*/}::$(cat $file)"; done 
       - name: Generate Manifests
         run: |
-          chmod +x ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/generate-manifests.sh
-          ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/generate-manifests.sh ${{ secrets.MANIFEST_ARTIFACT_PATH }} gen_manifests
+          chmod +x ${{ github.workspace }}/utils/generate-manifests.sh
+          ${{ github.workspace }}/utils/generate-manifests.sh manifests gen_manifests
         env:
           TARGET_NAMESPACE: ${{ secrets.TARGET_NAMESPACE }}
           VOTE_APP_TITLE: ${{ secrets.VOTE_APP_TITLE }}
@@ -65,11 +65,11 @@ jobs:
           SYSTEM_LABEL: ${{ secrets.SYSTEM_LABEL }}
       - name: Create PR
         run: |
-          chmod +x ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/create-pr.sh
+          chmod +x ${{ github.workspace }}/utils/create-pr.sh
           # Extract release number from the branch name
           # If it is a release branch, add a prefix to the manifests branch
           echo $GITHUB_REF | awk -F"release/" '{print $2}' 
           releasse_number=$(echo $GITHUB_REF | awk -F"release/" '{print $2}')
           [[ -z "$releasse_number" ]] || releasse_prefix=$(echo "release/"$releasse_number)  
 
-          ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b $releasse_prefix/${{ secrets.MANIFESTS_BRANCH }} -i $GITHUB_RUN_ID -t ${{ secrets.PAT }} -e ${{ secrets.ENVIRONMENT_NAME }} -p ${{ secrets.PLATFORM }}
+          ${{ github.workspace }}/utils/create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b $releasse_prefix/${{ secrets.MANIFESTS_BRANCH }} -i $GITHUB_RUN_ID -t ${{ secrets.PAT }} -e ${{ secrets.ENVIRONMENT_NAME }}
