--- a/.github/workflows/az-vote-stage-test.yml
+++ b/.github/workflows/az-vote-stage-test.yml
@@ -17,6 +17,6 @@ jobs:
         ref: ${{ github.event.client_payload.sha }}
     - name: Automated test
       run: |
-        chmod +x ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/smoke-test.sh
-        ${{ github.workspace }}/${{ secrets.UTILS_ARTIFACT_PATH }}/smoke-test.sh ${{ secrets.CLUSTER_ENTRY_URL }}${{ secrets.DEMO_APP_URL }}
+        chmod +x ${{ github.workspace }}/utils/smoke-test.sh
+        ${{ github.workspace }}/utils/smoke-test.sh ${{ secrets.CLUSTER_ENTRY_URL }}${{ secrets.DEMO_APP_URL }}
   
