--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -30,8 +30,8 @@ steps:
 - script: |
    echo "Create a new branch ${{ parameters.DEPLOY_BRANCH_NAME }}"   
    git checkout -b ${{ parameters.DEPLOY_BRANCH_NAME }}
-   mkdir -p $(MANIFESTS_FOLDER)
-   cp -r $(Build.SourcesDirectory)/gen_manifests/* $(MANIFESTS_FOLDER)/
+   #  mkdir -p $(MANIFESTS_FOLDER)
+   cp -r $(Build.SourcesDirectory)/gen_manifests/* ./
    git add -A
    echo "##vso[task.setvariable variable=GIT_STATUS]$(git status --porcelain | head -1)"   
   displayName: Add Generated Manifest to New Branch
