--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -1,6 +1,6 @@
 parameters:
   - name: DEPLOY_BRANCH_NAME
-    default: deploy/$(Build.BuildNumber)/$(MANIFESTS_BRANCH)
+    default: deploy/$(Build.BuildNumber)/$(ENVIRONMENT_NAME)
     type: string
   - name: MANIFEST_DIR
     default: $(System.DefaultWorkingDirectory)/$(MANIFESTS_REPO)
@@ -8,7 +8,7 @@ parameters:
 
 steps:
 - checkout: self
-- checkout: git://$(System.TeamProject)/$(MANIFESTS_REPO)
+- checkout: Manifest
   persistCredentials: true
 
 - task: Bash@3        
@@ -39,7 +39,7 @@ steps:
 - script: |
    echo $(System.AccessToken) | az devops login
    az devops configure --defaults organization=https://dev.azure.com/$(ORGANIZATION_NAME) project="$(PROJECT_NAME)" --use-git-aliases true
-   az repos pr create --project $(PROJECT_NAME) --repository $(MANIFESTS_REPO) --target-branch $(MANIFESTS_BRANCH) --source-branch ${{ parameters.DEPLOY_BRANCH_NAME }} --title "deployment $(Build.BuildNumber)" --auto-complete --squash
+   az repos pr create --project $(PROJECT_NAME) --repository $(MANIFESTS_REPO) --target-branch $(MANIFESTS_BRANCH) --source-branch ${{ parameters.DEPLOY_BRANCH_NAME }} --title "deployment $(Build.BuildNumber)" --squash
   env:
     AZURE_DEVOPS_CLI_PAT: $(System.AccessToken)
   displayName: Create Pull Request   
