--- a/.github/workflows/az-vote-cicd.yml
+++ b/.github/workflows/az-vote-cicd.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SRC_FOLDER: azure-vote
-      AZ_ACR_NAME: ShengrossGitOpsACRcicd
+      AZ_ACR_NAME: shengrossdemoacr
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.4
