--- a/azure-vote/src/azure-vote-front/config_file.cfg
+++ b/azure-vote/src/azure-vote-front/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
-TITLE = 'The Voting App'
+TITLE = 'The Voting App Test1'
 VOTE1VALUE = 'Cats'
 VOTE2VALUE = 'Dogs'
 SHOWHOST = 'false'
