--- a/.pipelines/az-vote-ci-pipeline.yaml
+++ b/.pipelines/az-vote-ci-pipeline.yaml
@@ -3,11 +3,11 @@ pr: none
 trigger:
   branches:
     include:
-      # Until Flux V2 integration is in Public Preview, work with FluxV2 branch.
-      # Once Flux V2 integration is in Public Preview, FluxV2 branch will be merged into the default branch.
-        - FluxV2
+        - master
 variables:
   - group: az-vote-app-dev
+  - name: DisableDockerDetector
+    value: true  
 
 pool:
   vmImage: ubuntu-latest
