--- a/.pipelines/genmanifest-createpr-template.yaml
+++ b/.pipelines/genmanifest-createpr-template.yaml
@@ -42,6 +42,7 @@ steps:
    pr_response=$(az repos pr create --project $(System.TeamProject) --repository $(MANIFESTS_REPO) --target-branch $(MANIFESTS_BRANCH) --source-branch ${{ parameters.DEPLOY_BRANCH_NAME }}  --title "deployment $(Build.BuildNumber)" --squash -o json)
    echo $pr_response
    export pr_num=$(echo $pr_response | jq '.pullRequestId')
+   [ -z "$pr_num" ] && exit 1
    echo "pr_num="$pr_num
    echo "##vso[task.setvariable variable=PR_NUM;isOutput=true]$pr_num"
   displayName: Create Pull Request   
