--- a/.pipelines/az-vote-pr-pipeline.yaml
+++ b/.pipelines/az-vote-pr-pipeline.yaml
@@ -4,10 +4,8 @@ trigger: none
 pr:
   branches:
     include:
-      # Until Flux V2 integration is in Public Preview, work with FluxV2 branch.
-      # Once Flux V2 integration is in Public Preview, FluxV2 branch will be merged into the default branch.
-        - FluxV2
-
+        - master
+        
 variables:
   - group: az-vote-app-dev
 
