--- a/azure-vote/src/azure-vote-front/config_file.cfg
+++ b/azure-vote/src/azure-vote-front/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
 TITLE = 'Nice Voting App'
-VOTE1VALUE = 'Cats111'
+VOTE1VALUE = 'Cats111ddd'
 VOTE2VALUE = 'Dogs'
 SHOWHOST = 'false'
